--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body ng-app="app">
+	
+	<nav class="top-bar" data-topbar>
+	  <ul class="title-area">
+		<li class="name">
+		  <h1><a href="#">DateCalc<img src="img/calculator.png" height="25" width="25"/></a></h1>
+		</li>
+	  </ul>
+	  <section class="top-bar-section">
+		<!-- Right Nav Section -->
+		<ul class="right">
+		  <li><a href="#">About</a></li>
+		</ul>
+
+		<!-- Left Nav Section -->
+		<!--
+			<ul class="left">
+			  <li><a href="#">Left Nav Button</a></li>
+			</ul>
+		-->
+	  </section>
+	</nav>		
+
+	
 	<div ng-controller="DateController">
 	  <div class="row">
 	    <div class="large-12 columns">
